--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -7,7 +7,7 @@ paddlepaddle==2.6.1
 pillow==10.4.0
 PyPDF2==2.10.5
 pytesseract==0.3.10
-common=0.1.2
+common==0.1.2
 paddlepaddle==2.6.1
 paddleocr==2.8.1
 setuptools==73.0.1
