runthroughtest_path_change

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,47 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+myenv/pyvenv.cfg
+myenv/Scripts/activate
+myenv/Scripts/activate.bat
+myenv/Scripts/Activate.ps1
+myenv/Scripts/convert-caffe2-to-onnx.exe
+myenv/Scripts/convert-onnx-to-caffe2.exe
+myenv/Scripts/cygdb.exe
+myenv/Scripts/cython.exe
+myenv/Scripts/cythonize.exe
+myenv/Scripts/deactivate.bat
+myenv/Scripts/easyocr.exe
+myenv/Scripts/f2py.exe
+myenv/Scripts/fleetrun.exe
+myenv/Scripts/fonttools.exe
+myenv/Scripts/httpx.exe
+myenv/Scripts/huggingface-cli.exe
+myenv/Scripts/imageio_download_bin.exe
+myenv/Scripts/imageio_remove_bin.exe
+myenv/Scripts/isympy.exe
+myenv/Scripts/lsm2bin.exe
+myenv/Scripts/ninja.exe
+myenv/Scripts/normalizer.exe
+myenv/Scripts/paddleocr.exe
+myenv/Scripts/pip.exe
+myenv/Scripts/pip3.10.exe
+myenv/Scripts/pip3.11.exe
+myenv/Scripts/pip3.exe
+myenv/Scripts/py.test.exe
+myenv/Scripts/pybidi.exe
+myenv/Scripts/pyftmerge.exe
+myenv/Scripts/pyftsubset.exe
+myenv/Scripts/pytesseract.exe
+myenv/Scripts/pytest.exe
+myenv/Scripts/python.exe
+myenv/Scripts/pythonw.exe
+myenv/Scripts/tiff2fsspec.exe
+myenv/Scripts/tiffcomment.exe
+myenv/Scripts/tifffile.exe
+myenv/Scripts/torchrun.exe
+myenv/Scripts/tqdm.exe
+myenv/Scripts/transformers-cli.exe
+myenv/Scripts/ttx.exe
+myenv/share/man/man1/isympy.1
+myenv/share/man/man1/ttx.1
