--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,47 @@ myenv/Scripts/transformers-cli.exe
 myenv/Scripts/ttx.exe
 myenv/share/man/man1/isympy.1
 myenv/share/man/man1/ttx.1
+Code/myenv/pyvenv.cfg
+Code/myenv/Scripts/activate
+Code/myenv/Scripts/activate.bat
+Code/myenv/Scripts/Activate.ps1
+Code/myenv/Scripts/convert-caffe2-to-onnx.exe
+Code/myenv/Scripts/convert-onnx-to-caffe2.exe
+Code/myenv/Scripts/cygdb.exe
+Code/myenv/Scripts/cython.exe
+Code/myenv/Scripts/cythonize.exe
+Code/myenv/Scripts/deactivate.bat
+Code/myenv/Scripts/easyocr.exe
+Code/myenv/Scripts/f2py.exe
+Code/myenv/Scripts/fleetrun.exe
+Code/myenv/Scripts/fonttools.exe
+Code/myenv/Scripts/httpx.exe
+Code/myenv/Scripts/huggingface-cli.exe
+Code/myenv/Scripts/imageio_download_bin.exe
+Code/myenv/Scripts/imageio_remove_bin.exe
+Code/myenv/Scripts/isympy.exe
+Code/myenv/Scripts/lsm2bin.exe
+Code/myenv/Scripts/ninja.exe
+Code/myenv/Scripts/normalizer.exe
+Code/myenv/Scripts/paddleocr.exe
+Code/myenv/Scripts/pip.exe
+Code/myenv/Scripts/pip3.10.exe
+Code/myenv/Scripts/pip3.11.exe
+Code/myenv/Scripts/pip3.exe
+Code/myenv/Scripts/py.test.exe
+Code/myenv/Scripts/pybidi.exe
+Code/myenv/Scripts/pyftmerge.exe
+Code/myenv/Scripts/pyftsubset.exe
+Code/myenv/Scripts/pytesseract.exe
+Code/myenv/Scripts/pytest.exe
+Code/myenv/Scripts/python.exe
+Code/myenv/Scripts/pythonw.exe
+Code/myenv/Scripts/tiff2fsspec.exe
+Code/myenv/Scripts/tiffcomment.exe
+Code/myenv/Scripts/tifffile.exe
+Code/myenv/Scripts/torchrun.exe
+Code/myenv/Scripts/tqdm.exe
+Code/myenv/Scripts/transformers-cli.exe
+Code/myenv/Scripts/ttx.exe
+Code/myenv/share/man/man1/isympy.1
+Code/myenv/share/man/man1/ttx.1
