gitignore file needed

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,51 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+Code/requirments.txt
+Code/RunthroughTest.py
+Code/en_PP-OCRv4_rec/inference.pdiparams
+Code/en_PP-OCRv4_rec/inference.pdiparams.info
+Code/en_PP-OCRv4_rec/inference.pdmodel
+Code/myenv/pyvenv.cfg
+Code/myenv/bin/activate
+Code/myenv/bin/activate.csh
+Code/myenv/bin/activate.fish
+Code/myenv/bin/Activate.ps1
+Code/myenv/bin/convert-caffe2-to-onnx
+Code/myenv/bin/convert-onnx-to-caffe2
+Code/myenv/bin/cygdb
+Code/myenv/bin/cython
+Code/myenv/bin/cythonize
+Code/myenv/bin/easyocr
+Code/myenv/bin/f2py
+Code/myenv/bin/fleetrun
+Code/myenv/bin/fonttools
+Code/myenv/bin/httpx
+Code/myenv/bin/imageio_download_bin
+Code/myenv/bin/imageio_remove_bin
+Code/myenv/bin/isympy
+Code/myenv/bin/lsm2bin
+Code/myenv/bin/ninja
+Code/myenv/bin/normalizer
+Code/myenv/bin/paddle
+Code/myenv/bin/paddleocr
+Code/myenv/bin/pip
+Code/myenv/bin/pip3
+Code/myenv/bin/pip3.11
+Code/myenv/bin/proton
+Code/myenv/bin/proton-viewer
+Code/myenv/bin/pybidi
+Code/myenv/bin/pyftmerge
+Code/myenv/bin/pyftsubset
+Code/myenv/bin/pytesseract
+Code/myenv/bin/python
+Code/myenv/bin/python3
+Code/myenv/bin/python3.11
+Code/myenv/bin/tiff2fsspec
+Code/myenv/bin/tiffcomment
+Code/myenv/bin/tifffile
+Code/myenv/bin/torchrun
+Code/myenv/bin/tqdm
+Code/myenv/bin/ttx
+Code/myenv/share/man/man1/isympy.1
+Code/myenv/share/man/man1/ttx.1
