--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,11 +42,9 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
         
-    - name: Run tests with coverage
+    - name: Test with Imot Test
       run: |
-        coverage run -m pytest
-        coverage report
-        coverage xml
+        python -m unittest
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
