--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -9,9 +9,9 @@ pillow==10.4.0
 PyPDF2==2.10.5
 pytesseract==0.3.10
 common==0.1.2
-paddlepaddle==2.6.1
-paddleocr==2.8.1
 setuptools==73.0.1
-easyocr==1.7.1
 pytest==8.3.2
 transformers==4.44.2
+
+# Note: When installing on Mac, run the following command:
+# pip install -r requirements.txt -i https://www.paddlepaddle.org.cn/packages/stable/cpu/
