--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -12,4 +12,6 @@ common==0.1.2
 setuptools==73.0.1
 pytest==8.3.2
 transformers==4.44.2
-numpy==1.24.4
+numpy==1.26.4
+PyQt5==5.15.11
+pandas==2.2.3
