Updated github actions to try and fix build error and integrate tests

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,11 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - '*'
 
 permissions:
   contents: read
@@ -17,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]  # Test across multiple Python versions
+        python-version: ["3.9"]  # Test using Python 3.9
 
     defaults:
       run:
@@ -44,7 +46,7 @@ jobs:
         
     - name: Test with Imot Test
       run: |
-        python -m unittest
+        python -m unittest discover -s unitTests -p 'test*'
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
