--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests, lint, and handle code coverage with multiple Python versions.
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: PDFTableConvert
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
     #- name: Test with Imot Test
     #  run: |
     #    python -m unittest
-        
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
@@ -57,3 +57,23 @@ jobs:
     - name: Notify on failure
       if: failure()
       run: echo "The build failed! Consider reviewing the logs."
+  
+  # Job for running the Windows batch file
+  run_bat:
+    needs: build   # Ensures this job runs after the Ubuntu job completes
+    runs-on: windows-latest
+
+    defaults:
+      run:
+        working-directory: ./Code
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Windows setup.bat
+        run: |
+          setup.bat
+
+      - name: Notify on failure
+        if: failure()
+        run: echo "The build failed! Consider reviewing the logs."
