--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -2,8 +2,6 @@ pdf2image==1.17.0
 table_ocr==0.2.5
 easyocr==1.7.1
 paddleocr==2.8.1
-paddlepaddle==2.6.1; sys_platform != 'darwin'
-paddlepaddle==3.0.0b1; sys_platform == 'darwin'
 pillow==10.4.0
 PyPDF2==2.10.5
 pytesseract==0.3.10
@@ -17,5 +15,9 @@ pandas==2.2.3
 opencv-python==4.5.5.62
 poppler-utils==0.1.0
 PyMuPDF==1.24.11
-torch==2.4.0
-torchvision==0.19.0
+torch==2.4.0; sys_platform == 'darwin'
+torchvision==0.19.0; sys_platform == 'darwin'
+paddlepaddle==3.0.0b1; sys_platform == 'darwin'
+paddlepaddle==2.6.1; sys_platform != 'darwin'
+torch==2.3.1+cpu -f https://download.pytorch.org/whl/torch_stable.html; sys_platform != 'darwin'
+torchvision==0.18.1+cpu -f https://download.pytorch.org/whl/torch_stable.html; sys_platform != 'darwin'
